--- a/src/assets/styles/scss/_error-page.scss
+++ b/src/assets/styles/scss/_error-page.scss
@@ -43,3 +43,12 @@
     }
   }
 }
+////
+.terms-content  {
+  p{
+  display: block;     
+  margin-bottom: 16px; 
+  line-height: 1.6;    
+  word-wrap: break-word; 
+}}
+
