--- a/src/assets/styles/scss/_layout.scss
+++ b/src/assets/styles/scss/_layout.scss
@@ -173,6 +173,71 @@ header {
   }
 }
 
+// .user_dropdown {
+//   border: 1px solid $white;
+//   background: $white;
+//   border-radius: 10px;
+//   padding: 8px 20px;
+//   transition: $transition;
+//   color: $main !important;
+//   cursor: pointer;
+//   display: flex;
+//   align-items: center;
+//   gap: 8px;
+//   font-weight: 600;
+//   font-size: 14px;
+
+//   .user-avatar {
+//     width: 32px;
+//     height: 32px;
+//     border-radius: 50%;
+//     object-fit: cover;
+//   }
+
+//   .user-name {
+//     white-space: nowrap;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//   }
+
+//   i {
+//     font-size: 12px;
+//   }
+
+//   &.show,
+//   &:active,
+//   &:hover {
+//     border-color: $input_stroke !important;
+//     color: $main !important;
+//     background: $white !important;
+//   }
+
+//   @media screen and (max-width: 450px) {
+//     padding: 5px 10px;
+//     font-size: 12px;
+
+//     .user-name {
+//       display: none; // الاسم يختفي على الشاشات الصغيرة
+//     }
+
+//     i {
+//       font-size: 10px;
+//     }
+//   }
+// }
+
+// .custom-dropdown-menu {
+//   min-width: 180px;
+
+//   .logout {
+//     cursor: pointer;
+//     color: #ef4444;
+
+//     &:hover {
+//       background: #fef2f2;
+//     }
+//   }
+// }
 .user_dropdown {
   border: 1px solid $white;
   background: $white;
@@ -183,23 +248,16 @@ header {
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
   font-weight: 600;
   font-size: 14px;
-
-  .user-avatar {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
+  // @media screen and (max-width: 991px) {
+  //   display: none;
+  // }
+  @media screen and (max-width: 450px) {
+    padding: 5px 10px;
+    font-size: 12px;
   }
-
-  .user-name {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
   i {
     font-size: 12px;
   }
@@ -211,35 +269,7 @@ header {
     color: $main !important;
     background: $white !important;
   }
-
-  @media screen and (max-width: 450px) {
-    padding: 5px 10px;
-    font-size: 12px;
-
-    .user-name {
-      display: none; // الاسم يختفي على الشاشات الصغيرة
-    }
-
-    i {
-      font-size: 10px;
-    }
-  }
 }
-
-.custom-dropdown-menu {
-  min-width: 180px;
-
-  .logout {
-    cursor: pointer;
-    color: #ef4444;
-
-    &:hover {
-      background: #fef2f2;
-    }
-  }
-}
-
-
 .dropdown-menu {
   padding: 12px;
   .dropdown-item {
